# miniproject-3

./: .env  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0c7c17ae76d0_made_new_relationship.py  42ead19060c2_added_users_table.py  5516296687a5_added_basic_tables.py  baa6f8c739be_added_orders_table.py  c48c66155715_chenges.py  d602c5b6a30a_added_products_table.py
app/: application.py  config.py  constants.py  database.py  main.py  middleware.py  settings.py
app/api/dependencies/: __init__.py  auth.py  db.py
app/api/routers/: __init__.py  auth.py  page.py  products.py  users.py
app/frontend/: authForm.html  index.html
app/models/: __init__.py  base.py  order.py  order_item.py  product.py  user.py
app/schemas/: __init__.py  product.py  user.py
app/utils/: __init__.py  generate_token.py  password.py  responses.py  token.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: Advertisements.jsx  App.jsx  index.css  main.jsx
frontend/src/components/: AuthenticateForm.jsx  ChooseAuth.jsx  CreateProductForm.jsx  Header.jsx  RegistrationForm.jsx
