[tool.poetry]
name = "miniproject-3"
version = "0.1.0"
description = ""
authors = ["thediogen <evgendvodnenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.37"
bcrypt = "^4.2.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
greenlet = "^3.1.1"
email-validator = "^2.2.0"
pillow = "^11.1.0"
passlib = "^1.7.4"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
